--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "scripts": {
     "test": "truffle test ./test/test-local/*",
+    "test:streaming": "truffle test ./test/test-local/StreamingElectricityMarketplace.test.js",
     "compile:local": "truffle compile --reset --network local",
     "migrate:local": "truffle migrate --reset --network local",
     "start-blank": "rm -rf client/src && cp -rf barebones/src client/"
